apps/public/share.rohrbom.be/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-jirafeau
  labels:
    gitops: flux
