apps/public/share.rohrbom.be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jirafeau
  namespace: svc-jirafeau
spec:
  type: ClusterIP
  selector: { app: jirafeau }
  ports:
    - name: http
      port: 80
      targetPort: http
