apps/public/share.rohrbom.be/netpol-egress-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jirafeau-egress-deny
  namespace: svc-jirafeau
spec:
  podSelector:
    matchLabels:
      app: jirafeau
  policyTypes: [Egress]
  egress: []
