apps/public/share.rohrbom.be/netpol-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jirafeau-from-public-ingress
  namespace: svc-jirafeau
spec:
  podSelector:
    matchLabels:
      app: jirafeau
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-30
      ports:
        - { protocol: TCP, port: 80 }
